Added static groups feature. Major code cleanup.

--- a/albion/templates/base.html
+++ b/albion/templates/base.html
@@ -50,6 +50,10 @@
               </li>
 
               <li>
+                <a href="{% url 'statics' %}"><i class="pe-7s-gym"></i><p>Statics</p></a>
+              </li>
+
+              <li>
                 <a href="{% url 'character_list' %}"><i class="pe-7s-users"></i><p>Members</p></a>
               </li>
 
@@ -58,7 +62,7 @@
               </li>
 
               <li>
-                <a href="#"><i class="pe-7s-pin"></i><p>Objectives</p></a>
+                <a href="{% url 'policies' %}"><i class="pe-7s-pin"></i><p>Policies</p></a>
               </li>
             </ul>
         </div>
