--- a/albion/templates/policies.html
+++ b/albion/templates/policies.html
@@ -40,7 +40,7 @@
       </div>
       <div id="loot" class="panel-collapse collapse">
         <div class="panel-body">
-          <p>Loot is a pretty nightmarish issue to handle in Albion, since there is no way to implement master loot. <b>All loot is either sold and donated to the guild treasury</b>, or <b>given to guild members</b> (and the donate a little bit of cost to the treasury). If you have an officer in the party, <b>the officer is the only one that should be looting bodies.</b> This will make it a lot easier in the future.</p>
+          <p>Loot is a pretty nightmarish issue to handle in Albion, since there is no way to implement master loot. <b>All loot is either sold and donated to the guild treasury</b>, or <b>given to guild members</b> (and then donate a little bit of cost to the treasury). If you have an officer in the party, <b>the officer is the only one that should be looting bodies.</b> This will make it a lot easier in the future.</p>
         </div>
       </div>
     </div>
@@ -55,7 +55,7 @@
       </div>
       <div id="activity" class="panel-collapse collapse">
         <div class="panel-body">
-          <p>Every member in Krypted Gaming is an actively playing games. We respect RL first, but the only way to achieve an active playerbase is to enforce activity requirements. <b>At the moment, we have no requirements for Albion Online.</b> Examples for other games include EVE Online, where we require two fleets a week.</p>
+          <p>Every member in Krypted Gaming is actively playing games. We respect RL first, but the only way to achieve an active playerbase is to enforce activity requirements. <b>At the moment, we have no requirements for Albion Online.</b> Examples for other games include EVE Online, where we require two fleets a week.</p>
         </div>
       </div>
     </div>
